[gd_scene load_steps=118 format=2]

[ext_resource path="res://cenas/cenas/Player.gd" type="Script" id=1]
[ext_resource path="res://sprites/Ela/Pulando/agua/1.png" type="Texture" id=2]
[ext_resource path="res://sprites/Ela/Pulando/agua/2.png" type="Texture" id=3]
[ext_resource path="res://sprites/Ela/Pulando/agua/3.png" type="Texture" id=4]
[ext_resource path="res://sprites/Ela/Pulando/agua/4.png" type="Texture" id=5]
[ext_resource path="res://sprites/Ela/Pulando/agua/5.png" type="Texture" id=6]
[ext_resource path="res://sprites/Ela/Pulando/agua/6.png" type="Texture" id=7]
[ext_resource path="res://sprites/Ela/Pulando/agua/7.png" type="Texture" id=8]
[ext_resource path="res://sprites/Ela/Pulando/agua/8.png" type="Texture" id=9]
[ext_resource path="res://sprites/Ela/Respirando/agua/1.png" type="Texture" id=10]
[ext_resource path="res://sprites/Ela/Respirando/agua/2.png" type="Texture" id=11]
[ext_resource path="res://sprites/Ela/Respirando/agua/3.png" type="Texture" id=12]
[ext_resource path="res://sprites/Ela/Respirando/agua/4.png" type="Texture" id=13]
[ext_resource path="res://sprites/Ela/Respirando/agua/5.png" type="Texture" id=14]
[ext_resource path="res://sprites/Ela/Respirando/agua/6.png" type="Texture" id=15]
[ext_resource path="res://sprites/Ela/Respirando/agua/7.png" type="Texture" id=16]
[ext_resource path="res://sprites/Ela/Pulando/terra/1.png" type="Texture" id=17]
[ext_resource path="res://sprites/Ela/Pulando/terra/2.png" type="Texture" id=18]
[ext_resource path="res://sprites/Ela/Pulando/terra/3.png" type="Texture" id=19]
[ext_resource path="res://sprites/Ela/Pulando/terra/4.png" type="Texture" id=20]
[ext_resource path="res://sprites/Ela/Pulando/terra/5.png" type="Texture" id=21]
[ext_resource path="res://sprites/Ela/Pulando/terra/6.png" type="Texture" id=22]
[ext_resource path="res://sprites/Ela/Pulando/terra/7.png" type="Texture" id=23]
[ext_resource path="res://sprites/Ela/Pulando/terra/8.png" type="Texture" id=24]
[ext_resource path="res://sprites/Ela/Correndo/normal/1.png" type="Texture" id=25]
[ext_resource path="res://sprites/Ela/Correndo/normal/2.png" type="Texture" id=26]
[ext_resource path="res://sprites/Ela/Correndo/normal/3.png" type="Texture" id=27]
[ext_resource path="res://sprites/Ela/Correndo/normal/4.png" type="Texture" id=28]
[ext_resource path="res://sprites/Ela/Correndo/normal/5.png" type="Texture" id=29]
[ext_resource path="res://sprites/Ela/Respirando/terra/1.png" type="Texture" id=30]
[ext_resource path="res://sprites/Ela/Respirando/terra/2.png" type="Texture" id=31]
[ext_resource path="res://sprites/Ela/Respirando/terra/3.png" type="Texture" id=32]
[ext_resource path="res://sprites/Ela/Respirando/terra/4.png" type="Texture" id=33]
[ext_resource path="res://sprites/Ela/Respirando/terra/5.png" type="Texture" id=34]
[ext_resource path="res://sprites/Ela/Respirando/terra/6.png" type="Texture" id=35]
[ext_resource path="res://sprites/Ela/Respirando/terra/7.png" type="Texture" id=36]
[ext_resource path="res://sprites/Ela/Correndo/ar/1.png" type="Texture" id=37]
[ext_resource path="res://sprites/Ela/Correndo/ar/2.png" type="Texture" id=38]
[ext_resource path="res://sprites/Ela/Correndo/ar/3.png" type="Texture" id=39]
[ext_resource path="res://sprites/Ela/Correndo/ar/4.png" type="Texture" id=40]
[ext_resource path="res://sprites/Ela/Correndo/ar/5.png" type="Texture" id=41]
[ext_resource path="res://sprites/Ela/Respirando/demonio/1.png" type="Texture" id=42]
[ext_resource path="res://sprites/Ela/Respirando/demonio/2.png" type="Texture" id=43]
[ext_resource path="res://sprites/Ela/Respirando/demonio/3.png" type="Texture" id=44]
[ext_resource path="res://sprites/Ela/Respirando/demonio/4.png" type="Texture" id=45]
[ext_resource path="res://sprites/Ela/Respirando/demonio/5.png" type="Texture" id=46]
[ext_resource path="res://sprites/Ela/Respirando/demonio/6.png" type="Texture" id=47]
[ext_resource path="res://sprites/Ela/Respirando/demonio/7.png" type="Texture" id=48]
[ext_resource path="res://sprites/Ela/Pulando/ar/1.png" type="Texture" id=49]
[ext_resource path="res://sprites/Ela/Pulando/ar/2.png" type="Texture" id=50]
[ext_resource path="res://sprites/Ela/Pulando/ar/3.png" type="Texture" id=51]
[ext_resource path="res://sprites/Ela/Pulando/ar/4.png" type="Texture" id=52]
[ext_resource path="res://sprites/Ela/Pulando/ar/5.png" type="Texture" id=53]
[ext_resource path="res://sprites/Ela/Pulando/ar/6.png" type="Texture" id=54]
[ext_resource path="res://sprites/Ela/Pulando/ar/7.png" type="Texture" id=55]
[ext_resource path="res://sprites/Ela/Pulando/ar/8.png" type="Texture" id=56]
[ext_resource path="res://sprites/Ela/Respirando/ar/1.png" type="Texture" id=57]
[ext_resource path="res://sprites/Ela/Respirando/ar/2.png" type="Texture" id=58]
[ext_resource path="res://sprites/Ela/Respirando/ar/3.png" type="Texture" id=59]
[ext_resource path="res://sprites/Ela/Respirando/ar/4.png" type="Texture" id=60]
[ext_resource path="res://sprites/Ela/Respirando/ar/5.png" type="Texture" id=61]
[ext_resource path="res://sprites/Ela/Respirando/ar/6.png" type="Texture" id=62]
[ext_resource path="res://sprites/Ela/Respirando/ar/7.png" type="Texture" id=63]
[ext_resource path="res://sprites/Ela/Respirando/normal/1.png" type="Texture" id=64]
[ext_resource path="res://sprites/Ela/Respirando/normal/2.png" type="Texture" id=65]
[ext_resource path="res://sprites/Ela/Respirando/normal/3.png" type="Texture" id=66]
[ext_resource path="res://sprites/Ela/Respirando/normal/4.png" type="Texture" id=67]
[ext_resource path="res://sprites/Ela/Respirando/normal/5.png" type="Texture" id=68]
[ext_resource path="res://sprites/Ela/Respirando/normal/6.png" type="Texture" id=69]
[ext_resource path="res://sprites/Ela/Respirando/normal/7.png" type="Texture" id=70]
[ext_resource path="res://sprites/Ela/Correndo/agua/1.png" type="Texture" id=71]
[ext_resource path="res://sprites/Ela/Correndo/agua/2.png" type="Texture" id=72]
[ext_resource path="res://sprites/Ela/Correndo/agua/3.png" type="Texture" id=73]
[ext_resource path="res://sprites/Ela/Correndo/agua/4.png" type="Texture" id=74]
[ext_resource path="res://sprites/Ela/Correndo/agua/5.png" type="Texture" id=75]
[ext_resource path="res://sprites/Ela/Correndo/fogo/1.png" type="Texture" id=76]
[ext_resource path="res://sprites/Ela/Correndo/fogo/2.png" type="Texture" id=77]
[ext_resource path="res://sprites/Ela/Correndo/fogo/3.png" type="Texture" id=78]
[ext_resource path="res://sprites/Ela/Correndo/fogo/4.png" type="Texture" id=79]
[ext_resource path="res://sprites/Ela/Correndo/fogo/5.png" type="Texture" id=80]
[ext_resource path="res://sprites/Ela/Pulando/fogo/1.png" type="Texture" id=81]
[ext_resource path="res://sprites/Ela/Pulando/fogo/2.png" type="Texture" id=82]
[ext_resource path="res://sprites/Ela/Pulando/fogo/3.png" type="Texture" id=83]
[ext_resource path="res://sprites/Ela/Pulando/fogo/4.png" type="Texture" id=84]
[ext_resource path="res://sprites/Ela/Pulando/fogo/5.png" type="Texture" id=85]
[ext_resource path="res://sprites/Ela/Pulando/fogo/6.png" type="Texture" id=86]
[ext_resource path="res://sprites/Ela/Pulando/fogo/7.png" type="Texture" id=87]
[ext_resource path="res://sprites/Ela/Pulando/fogo/8.png" type="Texture" id=88]
[ext_resource path="res://sprites/Ela/Pulando/normal/1.png" type="Texture" id=89]
[ext_resource path="res://sprites/Ela/Pulando/normal/2.png" type="Texture" id=90]
[ext_resource path="res://sprites/Ela/Pulando/normal/3.png" type="Texture" id=91]
[ext_resource path="res://sprites/Ela/Pulando/normal/4.png" type="Texture" id=92]
[ext_resource path="res://sprites/Ela/Pulando/normal/5.png" type="Texture" id=93]
[ext_resource path="res://sprites/Ela/Pulando/normal/6.png" type="Texture" id=94]
[ext_resource path="res://sprites/Ela/Pulando/normal/7.png" type="Texture" id=95]
[ext_resource path="res://sprites/Ela/Pulando/normal/8.png" type="Texture" id=96]
[ext_resource path="res://sprites/Ela/Correndo/terra/1.png" type="Texture" id=97]
[ext_resource path="res://sprites/Ela/Correndo/terra/2.png" type="Texture" id=98]
[ext_resource path="res://sprites/Ela/Correndo/terra/3.png" type="Texture" id=99]
[ext_resource path="res://sprites/Ela/Correndo/terra/4.png" type="Texture" id=100]
[ext_resource path="res://sprites/Ela/Correndo/terra/5.png" type="Texture" id=101]
[ext_resource path="res://sprites/Ela/Respirando/fogo/1.png" type="Texture" id=102]
[ext_resource path="res://sprites/Ela/Respirando/fogo/2.png" type="Texture" id=103]
[ext_resource path="res://sprites/Ela/Respirando/fogo/3.png" type="Texture" id=104]
[ext_resource path="res://sprites/Ela/Respirando/fogo/4.png" type="Texture" id=105]
[ext_resource path="res://sprites/Ela/Respirando/fogo/5.png" type="Texture" id=106]
[ext_resource path="res://sprites/Ela/Respirando/fogo/6.png" type="Texture" id=107]
[ext_resource path="res://sprites/Ela/Respirando/fogo/7.png" type="Texture" id=108]
[ext_resource path="res://cenas/Player/Vida.gd" type="Script" id=109]
[ext_resource path="res://cenas/Player/RichTextLabel.gd" type="Script" id=110]
[ext_resource path="res://sprites/energy_bar/energy_bar_bg.png" type="Texture" id=111]
[ext_resource path="res://sprites/energy_bar/energy_bar_fill.png" type="Texture" id=112]
[ext_resource path="res://cenas/Player/TextureProgress.gd" type="Script" id=113]
[ext_resource path="res://cenas/Player/PauseScreen.tscn" type="PackedScene" id=114]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "Run_Demonio",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "Jump_Agua",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "Idle_Agua",
"speed": 1.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "Jump_Terra",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ) ],
"loop": true,
"name": "Run_Normal",
"speed": 5.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ) ],
"loop": true,
"name": "Idle_Terra",
"speed": 5.0
}, {
"frames": [ ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ) ],
"loop": true,
"name": "Run_Ar",
"speed": 5.0
}, {
"frames": [ ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ) ],
"loop": true,
"name": "Idle_Demonio",
"speed": 5.0
}, {
"frames": [ ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ) ],
"loop": true,
"name": "Jump_Ar",
"speed": 5.0
}, {
"frames": [ ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ) ],
"loop": true,
"name": "Idle_Ar",
"speed": 5.0
}, {
"frames": [ ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ) ],
"loop": true,
"name": "Idle_Normal",
"speed": 5.0
}, {
"frames": [ ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ) ],
"loop": true,
"name": "Run_Agua",
"speed": 5.0
}, {
"frames": [ ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ) ],
"loop": true,
"name": "Run_Fogo",
"speed": 5.0
}, {
"frames": [ ExtResource( 81 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 88 ) ],
"loop": true,
"name": "Jump_Fogo",
"speed": 5.0
}, {
"frames": [ ExtResource( 89 ), ExtResource( 90 ), ExtResource( 91 ), ExtResource( 92 ), ExtResource( 93 ), ExtResource( 94 ), ExtResource( 95 ), ExtResource( 96 ) ],
"loop": true,
"name": "Jump_Normal",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "Jump_Demonio",
"speed": 5.0
}, {
"frames": [ ExtResource( 97 ), ExtResource( 98 ), ExtResource( 99 ), ExtResource( 100 ), ExtResource( 101 ) ],
"loop": true,
"name": "Run_Terra",
"speed": 5.0
}, {
"frames": [ ExtResource( 102 ), ExtResource( 103 ), ExtResource( 104 ), ExtResource( 105 ), ExtResource( 106 ), ExtResource( 107 ), ExtResource( 108 ) ],
"loop": true,
"name": "Idle_Fogo",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 11.0826

[sub_resource type="CapsuleShape2D" id=3]
radius = 13.3164
height = 10.8313

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Jump_Agua"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Dano" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dano"]
position = Vector2( 7.15256e-06, -2.50344 )
shape = SubResource( 3 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Vida" type="Node2D" parent="HUD"]
scale = Vector2( 0.05, 0.05 )
script = ExtResource( 109 )

[node name="RichTextLabel" type="RichTextLabel" parent="HUD/Vida"]
tab_size = 10
text = "00:00:00"
script = ExtResource( 110 )

[node name="Timer" type="Timer" parent="HUD/Vida/RichTextLabel"]
wait_time = 0.1
autostart = true

[node name="TextureProgress" type="TextureProgress" parent="HUD/Vida"]
margin_left = -116.362
margin_top = -556.323
margin_right = 131.638
margin_bottom = -516.323
max_value = 120.0
texture_under = ExtResource( 111 )
texture_progress = ExtResource( 112 )
script = ExtResource( 113 )

[node name="Sprite" type="Sprite" parent="HUD"]

[node name="FireDir" type="Position2D" parent="."]
visible = false
position = Vector2( 30, 3 )

[node name="FireEsq" type="Position2D" parent="."]
visible = false
position = Vector2( -30, 3 )

[node name="PauseGame" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="PauseScreen" parent="PauseGame" instance=ExtResource( 114 )]
visible = false
[connection signal="life_changed" from="." to="HUD/Vida" method="_on_Player_life_changed"]
[connection signal="timer_changed" from="." to="HUD/Vida/RichTextLabel" method="_on_Player_timer_changed"]
[connection signal="timer_changed" from="." to="HUD/Vida/TextureProgress" method="_on_Player_timer_changed"]
[connection signal="body_entered" from="Dano" to="." method="_on_Dano_body_entered"]
[connection signal="timeout" from="HUD/Vida/RichTextLabel/Timer" to="." method="_on_Timer_timeout"]
